--- a/index.html
+++ b/index.html
@@ -50,11 +50,10 @@
         <div class="sub1">
             <div class="links">
                 <a href="https://instagram.com/i_king_broast?igshid=NTc4MTIwNjQ2YQ=="><ion-icon name="logo-instagram" class="icon" id="logo-instagram"></ion-icon></a>
-                <a href="#"><ion-icon name="logo-facebook" class="icon"></ion-icon></a>
-                <a href="wa.me/+917592977779"><ion-icon name="logo-whatsapp" class="icon"></ion-icon></a>
+                <a href="https://wa.me/+917592977779"><ion-icon name="logo-whatsapp" class="icon"></ion-icon></a>
 
             </div>
-    
+
             <div class="location">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25964.995433430257!2d75.83972482159712!3d11.04907608993588!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba652ff08cdb9c3%3A0xf5607330816eb433!2sParappanangadi%2C%20Kerala!5e0!3m2!1sen!2sin!4v1696693516425!5m2!1sen!2sin" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
