--- a/index.html
+++ b/index.html
@@ -7,17 +7,26 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
+    <!----
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto:ital,wght@0,400;1,900&display=swap" rel="stylesheet">
-
+    ----->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <!--------------------heading --------------->
-    <h1>I KING <span>BROAST</span></h1>
+    <div class="heading">
+        <img src="./images/logo.png" alt="">
+        <h1>I KING <span>BROAST</span></h1>
+
+    </div>
+    
 
     <!------------------- heading --------------->
 
